Add auto-deploy workflow and recent updates